Feat[#3]: Added multiple layers, Fixed collection logic by adding a developer key for smoother access to external APIS. Created new folders and a new responses. Also added logging to the Controller.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,3 +17,4 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
 external-api:
   exchange-rate-api: https://api.riksbank.se/swea/v1
+  exchange-rate-key: ## KEY GOES HERE
